Fixes: cut out clutch logo and visible background on Safari

--- a/_sass/new-styles/modules/home/_hero.scss
+++ b/_sass/new-styles/modules/home/_hero.scss
@@ -228,7 +228,7 @@
       &-item__frame {
         background: linear-gradient(270deg, $color-secondary 50%, $color-white 0%, $color-white 100%);
         background-position: 100% 0%;
-        background-size: 210%;
+        background-size: 200%;
         transition: background-position .4s, color .2s;
         cursor: pointer;
 
