--- a/_sass/new-styles/modules/home/_testimonials.scss
+++ b/_sass/new-styles/modules/home/_testimonials.scss
@@ -11,6 +11,10 @@
       order: 1;
       width: 200px;
       margin: 0 auto;
+
+      .logotype {
+        background-size: contain;
+      }
     }
 
     &-text {
